# vm_glitch

./: Cargo.toml  Justfile  README.md  bundler.toml
.github/workflows/: bundle.yml  rust.yml
lang/: Cargo.toml
lang/proptest-regressions/: assemble.txt  parse.txt
lang/src/: assemble.rs  compile.rs  generate.rs  lib.rs  parse.rs
processor/: Cargo.toml
processor/src/: lib.rs
src/: analyzer.rs  delay_buffer.rs  double_buffer.rs  editor.rs  lib.rs  logo.rs  main.rs  threads.rs  trace.rs
src/editor/: analyzer.rs  logo.rs  mod.rs  program_editor.rs  timer.rs
vm/: Cargo.toml
vm/proptest-regressions/: lib.txt  memory.txt
vm/src/: backend.rs  bus.rs  interpret.rs  lib.rs  memory.rs  op.rs  runtime.rs  state.rs
vm/src/modules/: audio.rs
xtask/: Cargo.toml
