[package]
name = "vm_glitch"
version = "0.1.0"
edition = "2021"
authors = ["Robin Forbes <rsforbes0@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://sandiskette.com"
description = "Manipulate audio with a fool-vulnerable DSL"

[workspace]
members = [ "lang", "vm","xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
atomic_float = "1.1.0"
lang = { version = "0.1.0", path = "lang" }
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
triple_buffer = "8.0.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }
vm = {path = "./vm"}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
