[package]
name = "lang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.5.0"
chumsky = "1.0.0-alpha.7"
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.13.0"
rand = "0.8.5"
thiserror = "2.0.9"
variantly = "0.4.0"
vm = { version = "0.1.0", path = "../vm" }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
