[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
dasp = { workspace = true }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from"] }
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.13.0"
numquant = "0.2.0"
rustfft = "6.2.0"
tracing = { workspace = true }
tracy-client = { workspace = true, optional = true }
variantly = "0.4.0"

[features]
tracing = ["dep:tracy-client"]

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
