[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
chute = "0.2.1"
dasp = { workspace = true }
itertools = "0.13.0"
numquant = "0.2.0"
rustfft = "6.2.0"
tracing = { workspace = true }
tracy-client = { workspace = true, optional = true }

[features]
tracing = ["dep:tracy-client"]

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
